--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 <nav class="main-nav" style="position: relative;">
                     <ul>
                         <li style="background-color: #00AA5B; margin-left: 10px; font-weight: bold;">
-                            <a href="./index.html">Home</a></li>
+                            <a href="./index.html">Home</a>
+                        </li>
                         <li><a href="./about.html">About</a></li>
                         <li><a href="./service.html">Service</a></li>
                     </ul>
@@ -251,7 +252,8 @@
             <div class="col-6" style="display: flex; align-items: center; justify-content: end;">
                 <div class="content">
                     <div class="innerContent">Why <span style="color: var(--color-primary);">Hire me</span>?</div>
-                    <div class="innerDesc">With the desire to acquire knowledge, experience and experiences. I always complete the projects I undertake in the most meticulous way, customers can only say OMG!</div>
+                    <div class="innerDesc">With the desire to acquire knowledge, experience and experiences. I always
+                        complete the projects I undertake in the most meticulous way, customers can only say OMG!</div>
                     <div class="innerInfo">
                         <div class="info infoOne">
                             <div class="number">250+</div>
@@ -295,13 +297,15 @@
             <div class="row">
                 <div class="col-12" style="display: flex;">
                     <div class="col-6" style="padding-top: 48px;">
-                        <a href="./project.html" class="card" style=" background-image: url(./asset/images/project/Asset\ 3@4x.png);">
+                        <a href="./project.html" class="card"
+                            style=" background-image: url(./asset/images/project/Asset\ 3@4x.png);">
                             <div class="innerTitle">
                                 <div class="text textOne">
                                     At School
                                 </div>
                                 <div class="desc">
-                                    Exercises and projects are carried out at school. Under the guidance of lecturers at FPT
+                                    Exercises and projects are carried out at school. Under the guidance of lecturers at
+                                    FPT
                                     University - Hanoi.
                                 </div>
                             </div>
@@ -309,7 +313,8 @@
                         </a>
                     </div>
                     <div class="col-6" style="padding-top: 48px;">
-                        <a href="./project.html" class="card" style=" background-image: url(./asset/images/project/Asset\ 5@4x.png);">
+                        <a href="./project.html" class="card"
+                            style=" background-image: url(./asset/images/project/Asset\ 5@4x.png);">
                             <div class="innerTitle">
                                 <div class="text textTwo">
                                     My Works
@@ -346,7 +351,8 @@
                     <div class="innerTitle">More - Visit my projects</div>
                     <a href="./project.html" class="btnFill"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
-                <div class="innerDesc">Where I store all my products so far, you can check them out and send me your design ideas!</div>
+                <div class="innerDesc">Where I store all my products so far, you can check them out and send me your
+                    design ideas!</div>
             </div>
         </div>
     </div>
@@ -391,8 +397,7 @@
                                     </div>
                                 </div>
                                 <div class="row" style="padding: 14px 21px;">
-                                    <div class="rate"
-                                        style="font-size: 25px; padding-right: 5px; color: var(--color-primary);">
+                                    <div class="rate">
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
@@ -402,7 +407,7 @@
                                     <div class="numberRate" style="font-size: 25px;">5.0</div>
                                 </div>
                                 <div>
-                                    <div style="font-size: 20px; padding: 0 21px;">
+                                    <div style="font-size: 20px; padding: 0 21px; max-height: 390px; overflow: hidden;">
                                         consectetur adipiscing elit. Sed congue interdum ligula a dignissim. Lorem ipsum
                                         dolor sit amet, consectetur adipiscing elit. Sed lobortis orci elementum egestas
                                         lobortis.Sed lobortis orci elementum egestas lobortis.Sed lobortis orci
@@ -421,8 +426,7 @@
                                     </div>
                                 </div>
                                 <div class="row" style="padding: 14px 21px;">
-                                    <div class="rate"
-                                        style="font-size: 25px; padding-right: 5px; color: var(--color-primary);">
+                                    <div class="rate">
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
@@ -432,7 +436,7 @@
                                     <div class="numberRate" style="font-size: 25px;">5.0</div>
                                 </div>
                                 <div>
-                                    <div style="font-size: 20px; padding: 0 21px;">
+                                    <div style="font-size: 20px; padding: 0 21px; max-height: 390px; overflow: hidden;">
                                         consectetur adipiscing elit. Sed congue interdum ligula a dignissim. Lorem ipsum
                                         dolor sit amet, consectetur adipiscing elit. Sed lobortis orci elementum egestas
                                         lobortis.Sed lobortis orci elementum egestas lobortis.Sed lobortis orci
@@ -451,8 +455,7 @@
                                     </div>
                                 </div>
                                 <div class="row" style="padding: 14px 21px;">
-                                    <div class="rate"
-                                        style="font-size: 25px; padding-right: 5px; color: var(--color-primary);">
+                                    <div class="rate">
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
@@ -462,7 +465,7 @@
                                     <div class="numberRate" style="font-size: 25px;">5.0</div>
                                 </div>
                                 <div>
-                                    <div style="font-size: 20px; padding: 0 21px;">
+                                    <div style="font-size: 20px; padding: 0 21px; max-height: 390px; overflow: hidden;">
                                         consectetur adipiscing elit. Sed congue interdum ligula a dignissim. Lorem ipsum
                                         dolor sit amet, consectetur adipiscing elit. Sed lobortis orci elementum egestas
                                         lobortis.Sed lobortis orci elementum egestas lobortis.Sed lobortis orci
@@ -492,34 +495,32 @@
                 <div class="col-12"
                     style="display: flex; justify-content: center; align-items: center; margin-top: 10px;">
                     <form action="" style="position: relative;">
-                        <div class="iconMail" style="position: absolute; width: 64px; height: 64px;">
+                        <div class="iconMail">
                             <i style="font-size: 26px;" class="fa-solid fa-envelope"></i>
                         </div>
                         <input type="email" placeholder="Enter Email Address">
                         <button style="position: absolute;">Send</button>
                     </form>
                 </div>
-                <div class="col-12" style="display: flex; margin-top: 10px;">
-                    <div class="col-3"></div>
-                    <div class="col-2" style="display: flex; justify-content: center; align-items: center;">
+                <div class="col-12 judge" style="display: flex; margin-top: 10px; justify-content: center;">
+                    <div class="col-2">
                         <div class="icon" style="margin-right: 5px;">
                             <i class="fa-solid fa-star-half-stroke"></i>
                         </div>
                         <div class="innerText">4.9/5 Average Ratings</div>
                     </div>
-                    <div class="col-2" style="display: flex; justify-content: center; align-items: center;">
-                        <div class="icon" style="margin-right: 5px;">
+                    <div class="col-2">
+                        <div class="icon" style="margin-right: 10px; margin-left: -8px;">
                             <i class="fa-solid fa-award"></i>
                         </div>
                         <div class="innerText">25+ Winning Awards</div>
                     </div>
-                    <div class="col-2" style="display: flex; justify-content: center; align-items: center;">
-                        <div class="icon" style="margin-right: 5px;">
+                    <div class="col-2">
+                        <div class="icon" style="margin-right: 5px; margin-left: 13px;">
                             <i class="fa-solid fa-certificate"></i>
                         </div>
                         <div class="innerText">Certified Product Design</div>
                     </div>
-                    <div class="col-3"></div>
                 </div>
             </div>
         </div>
@@ -551,18 +552,17 @@
         <div class="container" style="padding: 97px 71px;">
             <div class="row">
                 <div class="col-12" style="display: flex;">
-                    <div class="col-2" style="font-size: 48px; font-weight: 500; line-height: 50px;">From my blog post
+                    <div class="col-6" style="font-size: 48px; font-weight: 500; line-height: 50px;">From my blog post
                     </div>
-                    <div class="col-8"></div>
-                    <div class="col-2" style="display: flex; justify-content: end; align-items: center;">
+                    <div class="col-6" style="display: flex; justify-content: end; align-items: center;">
                         <a id="btn" href="https://www.facebook.com/rabbita1112/" target="_blank">
                             See all
                         </a>
                     </div>
                 </div>
-                <div class="col-12" style="margin-top: 48px; display: flex;">
+                <div class="col-12" style="margin-top: 48px; display: flex; flex-wrap: wrap;">
                     <a href="https://www.facebook.com/rabbita1112/posts/pfbid02WRcovEvHfJ6GhFJ7kL63DGwiTHW1L7vGTLMLjyNwt8FBjEvJcaKv9Xrz62nycXc6l"
-                        target="_blank" class="box col-3"
+                        target="_blank" class="box col-xl-3 col-lg-6 col-md-12 col-sm-12"
                         style="padding: 10px 10px; padding-bottom: 20px; border-radius: 30px;">
                         <div class="card"
                             style="background-image: url(./asset/images/blog1.png); background-size: cover;"></div>
@@ -587,7 +587,7 @@
                             Dong Mo, Son Tay, Hanoi</div>
                     </a>
                     <a href="https://www.facebook.com/rabbita1112/posts/pfbid02SfxmzKjTRR2VhNdYd45cB1ENzhD3J7XmJQKDBDgvSGpVwF3KBv2pRcW8AL12puEql"
-                        target="_blank" class="box col-3"
+                        target="_blank" class="box col-xl-3 col-lg-6 col-md-12 col-sm-12"
                         style="padding: 10px 10px; padding-bottom: 20px; border-radius: 30px;">
                         <div class="card"
                             style="background-image: url(./asset/images/blog2.png); background-size: cover;"></div>
@@ -612,7 +612,7 @@
                             Tan Xa Lake, Thach That, Hanoi</div>
                     </a>
                     <a href="https://www.facebook.com/rabbita1112/posts/pfbid02LF7s6R4sxytiiZfNHQdXrYxrdcZePuw8L1qZy7TjEVLa57YHg68nV8csimxs2asTl"
-                        target="_blank" class="box col-3"
+                        target="_blank" class="box col-xl-3 col-lg-6 col-md-12 col-sm-12"
                         style="padding: 10px 10px; padding-bottom: 20px; border-radius: 30px;">
                         <div class="card"
                             style="background-image: url(./asset/images/blog3.png); background-size: cover;"></div>
@@ -634,10 +634,11 @@
                             </div>
                         </div>
                         <div class="desc" style="margin-top: 12px; font-size: 20px;">Introduction to Adobe Illustrator🫣
-                            <br> 🎨: Cover by Rabbita</div>
+                            <br> 🎨: Cover by Rabbita
+                        </div>
                     </a>
                     <a href="https://www.facebook.com/rabbita1112/posts/pfbid0egWGzALBzaBCgJ5W7itFnyScbKWSrnFdzJWCVWv4HfTgN9tmXMhWTnoSmuaiPRbAl"
-                        target="_blank" class="box col-3"
+                        target="_blank" class="box col-xl-3 col-lg-6 col-md-12 col-sm-12"
                         style="padding: 10px 10px; padding-bottom: 20px; border-radius: 30px;">
                         <div class="card"
                             style="background-image: url(./asset/images/blog4.png); background-size: cover;"></div>
@@ -673,9 +674,9 @@
         <div class="container" style="padding: 15px 71px;">
             <div class="boxOne row">
                 <div class="col-12" style="display: flex; margin-top: 12px;">
-                    <div class="col-10" style="font-size: 64px; font-weight: 500; margin-left: 20px;">Lets Connect there
+                    <div class="col-6 lh">Lets Connect there
                     </div>
-                    <div class="col-2" style="display: flex; justify-content: end; align-items: center;">
+                    <div class="col-6" style="display: flex; justify-content: end; align-items: center;">
                         <a href="./contact.html" class="btnA"
                             style="background-color: var(--color-primary); border-radius: 60px; padding: 10px 20px; font-size: 26px; color: white; transition: 0.5s; margin-right: 20px;">
                             Hire me <i style="rotate: -45deg;" class="fa-solid fa-arrow-right"></i>
@@ -685,8 +686,8 @@
             </div>
             <hr>
             <div class="boxTwo row" style="margin-top: 56px;">
-                <div class="col-12" style="display: flex;">
-                    <div class="col-4">
+                <div class="col-12 end" style="display: flex;">
+                    <div class="col-xl-4 col-lg-7 col-md-12 col-sm-12 mb-5">
                         <div class="logo-name">
                             <img class="logo" src="./asset/images/logo.png" alt="">
                             <div class="name">RABBITA</div>
@@ -726,7 +727,8 @@
 
                         </div>
                     </div>
-                    <div class="col-2" style="display: flex; flex-direction: column; margin-left: 50px;">
+                    <div class="col-xl-2 col-lg-4 col-md-6 col-sm-6 mb-5"
+                        style="display: flex; flex-direction: column;">
                         <div class="title">Navigation</div>
                         <a href="./index.html">Home</a>
                         <a href="./about.html">About Us</a>
@@ -734,13 +736,13 @@
                         <a href="./resume.html">Resume</a>
                         <a href="./project.html">Project</a>
                     </div>
-                    <div class="col-3">
+                    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 mb-5">
                         <div class="title">Contact</div>
                         <p style="margin-top: 20px; font-size: 16px;">0916595807</p>
                         <p style="margin-top: 20px; font-size: 16px;">quangthoa11122001@gmail.com</p>
                         <p style="margin-top: 20px; font-size: 16px;">facebook.com.quangthoanguyn</p>
                     </div>
-                    <div class="col-3">
+                    <div class="col-xl-3 col-lg-6 col-md-12 col-sm-12 mb-5">
                         <div class="title">Get the latest information</div>
                         <form action="" style="margin-top: 20px; display: flex;">
                             <input type="email" placeholder="Email Address">
@@ -765,10 +767,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
-    </script>
+        </script>
 
     <!-- Link Slick -->
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
