update home + project

--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12" style="display: flex;">
-                    <div class="col-6" style="padding-top: 48px;">
+                <div class="col-12" style="display: flex; padding-top: 48px;">
+                    <div class="col-6" style="justify-content: center; display: flex;">
                         <a href="./project.html" class="card"
                             style=" background-image: url(./asset/images/project/Asset\ 3@4x.png);">
                             <div class="innerTitle">
@@ -312,7 +312,7 @@
                             <div class="btnOutline btnOne"><i class="fa-solid fa-arrow-right"></i></div>
                         </a>
                     </div>
-                    <div class="col-6" style="padding-top: 48px;">
+                    <div class="col-6" style="justify-content: center; display: flex;">
                         <a href="./project.html" class="card"
                             style=" background-image: url(./asset/images/project/Asset\ 5@4x.png);">
                             <div class="innerTitle">
