--- a/project.html
+++ b/project.html
@@ -90,10 +90,23 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="inner-wrap">
+                <div class="inner-box">
+                    <img src="./asset/images/project/2022-FCS Season No.1.jpg" alt="">
+                </div>
+                <div class="inner-box">
+                    <img src="./asset/images/project/2022-nohevol.jpg" alt="">
+                </div>
+                <div class="inner-box">
+                    <img src="./asset/images/project/2023-TikTok.png" alt="">
+                </div>
+            </div>
+        </div>
         <div class="row" style="margin-top: 50px;">
             <div class="col-12" style="display: flex; align-items: center;">
                 <div class="col-10">
-                    <div class="heading">My <span style="color: var(--color-primary);"></span></div>
+                    <div class="heading">My <span style="color: var(--color-primary);">Works</span></div>
                 </div>
                 <div class="col-2" style="display: flex; justify-content: end;">
                     <a href="#" class="btnFill" style="text-align: center; margin-right: 71px;">
