--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             <div class="text">Event Completed</div>
                         </div>
                     </div>
-                    <a href="./contact.html" class="btnHire">Hire me</a>
+                    <a href="./service.html" class="btnHire">Hire me</a>
                 </div>
             </div>
             <div class="col-6">
