update personal skill

--- a/about.html
+++ b/about.html
@@ -285,7 +285,7 @@
                                 <div class="circle"></div>
                                 <div class="circle"></div>
                                 <div class="circle"></div>
-                                <div class="circle"></div>
+                                <div class="circle" style="background-color: aliceblue;"></div>
                             </div>
                         </div>
                         <div class="skill">
@@ -298,9 +298,9 @@
                                 <div class="circle"></div>
                                 <div class="circle"></div>
                                 <div class="circle"></div>
-                                <div class="circle"></div>
-                                <div class="circle"></div>
-                                <div class="circle"></div>
+                                <div class="circle" style="background-color: aliceblue;"></div>
+                                <div class="circle" style="background-color: aliceblue;"></div>
+                                <div class="circle" style="background-color: aliceblue;"></div>
                             </div>
                         </div>
                         <div class="skill">
@@ -314,8 +314,8 @@
                                 <div class="circle"></div>
                                 <div class="circle"></div>
                                 <div class="circle"></div>
-                                <div class="circle"></div>
-                                <div class="circle"></div>
+                                <div class="circle" style="background-color: aliceblue;"></div>
+                                <div class="circle" style="background-color: aliceblue;"></div>
                             </div>
                         </div>
                     </div>
